2009-01-14  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	added a missing connect_unlock in imap_connect_online, when auth
	failed.

2009-01-09  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account.c: initialize properly some 
	variables, and also free properly some vars (to avoid leaks). 
	Patch contributed by Qasim Ahmad.

	* libtinymail-camel/tny-camel-folder.c: leak fix in TnyCamelFolder
	copy_shared implementation (contributed by Qashim Ahmad).

2009-01-08  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	now *_stop_idle_connect_lock loops if it cannot get the connect lock
	to avoid interlocks if two concurrent threads try to get the lock.

2008-12-15  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account-store.c: removed unnecesary camel
	exception checks.

	* libtinymail-camel/tny-session-camel.c: added missing unref in
	set_device.

2008-12-08  Suhang Wan  <shuang.wan@intel.com>

	* Fixed compilation errors in unit tests

2008-11-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: set priv->account to NULL in
	dispose after unref'ing it.

2008-11-27  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c
	Fix big typo: folder list store inherits from list store, not 
	tree store.

	* libtinymailui-gtk/tny-gtk-folder-list-store.[ch]:
	Folder list store path separator is now configurable.

	* libtinymailui-gtk/tny-gtk-folder-list-store.c:
	Fixed reference leaks

2008-11-24  Jose Dapena Paz  <jdapena@igalia.com>

	* Added new TnyGtkFolderListStore, implementing a plain model (no tree)
	for the folder store.

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.[ch]:
	Added support for settings construction flags. Also added a flag
	"show path" for the tree model, that makes it store the full path 
	name.
