@@ -1,3 +1,9 @@
+2009-01-15  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymailui-gtk/tny-gtk-folder-list-store.c
+	(tny_gtk_folder_list_store_remove): remove folders that
+	belong to the account that is being removed
+
 2009-01-14  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
